# iga

./: CMakeLists.txt  Makefile  ObjectManagerBase.h  bbar_ex.cxx  config.sh  curved_shell_ex.cxx  elbow.cxx  elbow_geometry.txt  heat_conduction.cxx  ht3d_ex.cxx  integration_ex.cxx  kl_shell_ex.cxx  main.cxx  nlshell_plane_ex.cxx  nlsm3d_ex.cxx  pinched_shell_ex.cxx  plane_strain_ex.cxx  shell_curved_beam_ex.cxx  shell_ex.cxx  shell_ht_ex.cxx  shell_pinched_cylinder_ex.cxx  shell_plane_ex.cxx  sixdof_shell_ex.cxx  sm3d_ex.cxx  solid_mechanics.cxx  tim_beam_axial_ex.cxx  tim_beam_ex.cxx
base/: BaseObjectManager.h  ConstraintBase.h  DirichletConstraint.h  FeResults.h  LaSystem.h  MatrixTypeTraits.h  MatrixTypes.h  NamedObject.h  NonCopyable.h  Operator.h  PairedObjectManagerBase.h  SimulationClock.h  SimulationResults.h  Singleton.h  SolverBase.h  StoredVariable.h  StoredVariableOperator.h  StoredVariableTraits.h  Values.h  VariableManager.h  VariableTags.h  VariableUpdateManager.h  VariableUpdater.h  WeakFormTags.h  WeakForms.h
iga/: CMakeLists.txt  CurveElementMapper.cpp  CurveElementMapper.h  DirichletConstraint.h  ElementMapperBase.h  ElementMappers.h  GeometricDofManager.h  IgaIO.h  IntegrationPoints.h  LinearSolver.h  Makefile  ManifoldElementMapper.cpp  ManifoldElementMapper.h  ParametricMesh.h  PlaneElementMapper.cpp  PlaneElementMapper.h  PointElementMapper.cpp  PointElementMapper.h  Quadrature.h  QuadratureMesh.cpp  QuadratureMesh.h  ShapeFunctions.h  SolidElementMapper.cpp  SolidElementMapper.h
iga/base/: LaSystem.h
iga/boundary_conditions/: BoundaryConditionBase.h  BoundaryConditionManager.h
iga/constraints/: ConstraintBase.h  ConstraintManager.h  ConstraintTags.h  DirichletConstraint.h
iga/operators/: BIdOperator.h  Dot.h  IdentityOperator.h  Minus.h  Multiply.h  Plus.h  ShapeFunctionOperator.h  VectorizedVariable.h
iga/solvers/: ContinuationSolver.h  IgaSolverBase.h  IterativeSolver.h  LinearParabolicInnerSolver.h  LinearSolver.h  NonlinearParabolicInnerSolver.h  NonlinearSolver.h  ParabolicAlphaSolver.h  TimeDependentSolver.h
iga/weakforms/: WeakFormManager.h  WeakForms.h
materials/: CMakeLists.txt
materials/linear_elastic/: MembraneMaterialTangent.h  TransverseShearMaterialTangent.h
python/: plot_curve.py  plot_planar.py  plot_surface.py  plot_xy.py  surface_animation.py
shellmechanics/: CMakeLists.txt
shellmechanics/boundary_conditions/: AppliedPressure.h  AppliedTraction.h  DirichletPointConstraint.h  DisplacementSymmetryConstraint.h  FixedFixed.h  NormalSourceBase.h  PointLoad.h  RotationSymmetryConstraint.h  SymmetryConstraint.h
shellmechanics/operators/: BendingGreensStrainOperator.h  DisplacementIdOperator.h  GeometricStiffnessOperator_grada.h  GeometricStiffnessOperator_gradu.h  GeometricStiffnessOperator_ida.h  LinearBendingStrainOperator.h  LinearMembraneStrainOperator.h  LinearShellConstraint.h  LinearTransverseStrainOperator.h  MembraneGreensStrainOperator.h  NonlinearShellWeakForms.h  RotationIdOperator.h  ShellStrain.h  ShellStress.h  ShellWeakForms.h  TransverseGreensStrainOperator.h
shellmechanics/variables/: StoredSixDofAccelerationVariable.h  StoredSixDofDisplacementVariable.h  StoredSixDofVelocityVariable.h
solidmechanics/: StoredAccelerationVariable.h  StoredDisplacementVariable.h  StoredVelocityVariable.h
splines/: Algorithms.h  BSpline.h  CMakeLists.txt  DegreeElevation_impl.cpp  DegreeReduction.cpp  DegreeReduction.h  GeometricObject.h  KnotInsertion_impl.cpp  Makefile  Nurbs.h  SplineModifiers.cpp  SplineModifiers.h  orphaned.txt
splines/utils/: Converters.h  Quaternion.h  Transformations.h  VectorOperations.h
thermal/: StoredTemperatureRateVariable.h  StoredTemperatureVariable.h
utils/: CMakeLists.txt  EnumeratedObject.h  GeometryUtils.cpp  GeometryUtils.h  MatrixTypeTraits.h  MatrixTypes.h  MpiDatatypeTraits.h  MpiStorageTraits.h  MpiUtils.h  TensorUtils.cpp  TensorUtils.h
